deployment/k8s/all-in-one.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-ping-pong
  template:
    metadata:
      labels:
        app: go-ping-pong
    spec:
      containers:
      - name: go-ping-pong
        image: ghcr.io/christianbirchler-org/go-ping-pong:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 1Gi
            cpu: 2
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  postgresql
  labels:
    app:  postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app:  postgresql
    spec:
      containers:
      - name:  postgresql
        image:  postgres:16
        resources:
          requests:
            cpu: "2"
            memory: 4Gi
          limits:
            cpu: "4"
            memory: 8Gi
        ports:
        - containerPort:  5432
          name:  postgresql
        volumeMounts:
        - name: postgresql
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgresql-pvc
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: go-ping-pong
spec:
  type: ClusterIP
  clusterIP: None # headless service
  selector:
    app: go-ping-pong
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgresql
  type: ClusterIP
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
    targetPort: 5432

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ping-pong
  annotations:
spec:
  rules:
  - host: go-ping-pong.pm4.init-lab.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-ping-pong
            port:
              number: 80
